XML 8.7.19 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.7.19.

--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
@@ -134,7 +134,7 @@
         <item quantity="other">%1$s</item>
     </plurals>
     <plurals name="whatsapp_delete_files">
-        <item quantity="other">Poistetaanko %1$d tiedostoa?</item>
-        <item quantity="one">Poistetaanko %1$d tiedosto?</item>
+        <item quantity="other">Poistetaanko %1$d kohdetta?</item>
+        <item quantity="one">Poistetaanko %1$d kohde?</item>
     </plurals>
 </resources>
