--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/plurals.xml
@@ -101,8 +101,8 @@
         <item quantity="one">Poistetaanko tämä kuva?</item>
     </plurals>
     <plurals name="delete_photo_from_this_album_and_cloud_msg">
-        <item quantity="other">Poistetaanko %d kuvaa from this album and Mi Cloud?</item>
-        <item quantity="one">Poistetaanko tämä kuva from this album and Mi Cloud?</item>
+        <item quantity="other">Poistetaanko %d kuvaa tästä albumista ja Mi Pilvestä?</item>
+        <item quantity="one">Poistetaanko tämä kuva tästä albumista ja Mi Pilvestä?</item>
     </plurals>
     <plurals name="delete_video_from_all_devices_and_cloud_msg">
         <item quantity="other">Poistetaanko %d videota kaikista laitteista ja Mi Pilvestä?</item>
