XML 8.7.26 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.7.26.

--- a/Finnish/main/Notes.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Notes.apk/res/values-fi-rFI/plurals.xml
@@ -17,7 +17,7 @@
         <item quantity="one">%d sekunti jäljellä</item>
      </plurals>
     <plurals name="word_count">
-        <item quantity="other">%s merkkiä</item>
-        <item quantity="one">%s merkki</item>
+        <item quantity="other">%d merkkiä</item>
+        <item quantity="one">%d merkki</item>
      </plurals>
 </resources>
