XML 8.8.3 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.8.3. Tässä päivityksessä korjattiin myös ongelma #1 käännökset. Laitteistotietoja ei voi nykyään kääntää suomeksi, koska sen käännöspohjaa ei ole olemassa vaan tiedot tulevat suoraan Xiaomi-palvelimilta.

--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
@@ -189,6 +189,7 @@
         <item>Kiina</item>
         <item>Iran</item>
         <item>Israel</item>
+		<item>Intia</item>
         <item>Japani</item>
         <item>Mongolia</item>
         <item>Bermuda</item>
