--- a/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="hmode_app_groups">
+	<string-array name="pc_manage_active_app_items">
+        <item>Laita sovellukset nukkumaan</item>
+        <item>Säästä virtaa</item>
+    </string-array>
+    <string-array name="hmode_app_classify1">
         <item>Mukautettu</item>
         <item>Virransäästö</item>
+    </string-array>
+	<string-array name="hmode_app_classify2">
+        <item>Aktiiviset sovellukset</item>
+        <item>Nukkuvat sovellukset</item>
     </string-array>
     <string-array name="thermal_entries">
         <item>Oletus lämpötilan säätötila</item>
         <item>Suorituskykytila</item>
+    </string-array>
+	<string-array name="thermal_summaries">
+        <item>Priorisoi lämpötilan säätö</item>
+        <item>Priorisoi suorituskyky</item>
     </string-array>
     <string-array name="power_mode_entries">
         <item>Suorituskyky</item>
