--- a/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
@@ -12,6 +12,10 @@
         <item>Aktiiviset sovellukset</item>
         <item>Nukkuvat sovellukset</item>
     </string-array>
+    <string-array name="emode_app_groups">
+        <item>Järjestelmäsovellukset</item>
+        <item>Muut sovellukset</item>
+    </string-array>
     <string-array name="thermal_entries">
         <item>Oletus lämpötilan säätötila</item>
         <item>Suorituskykytila</item>
