--- a/Finnish/main/Settings.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/plurals.xml
@@ -220,6 +220,10 @@
         <item quantity="other">%1$d nappulaa näytetään Ilmoitusalueella</item>
         <item quantity="one">%1$d nappula näytetään Ilmoitusalueella</item>
     </plurals>
+    <plurals name="show_audio_logcat_countdown">
+        <item quantity="other">%1$d askeleen päässä äänilokista</item>
+        <item quantity="one">%1$d askeleen päässä äänilokista</item>
+    </plurals>
     <plurals name="show_cit_countdown">
         <item quantity="other">Olet %1$d askeleen päässä CIT:stä.</item>
         <item quantity="one">Olet %1$d askeleen päässä CIT:stä.</item>
@@ -227,6 +231,14 @@
     <plurals name="show_dev_countdown">
         <item quantity="other">Enää %1$d vaihetta, niin sinusta tulee kehittäjä.</item>
         <item quantity="one">Enää %1$d vaihe, niin sinusta tulee kehittäjä.</item>
+    </plurals>
+    <plurals name="show_gps_logcat_countdown">
+        <item quantity="other">%1$d askeleen päässä GPS-lokista</item>
+        <item quantity="one">%1$d askeleen päässä GPS-lokista</item>
+    </plurals>
+    <plurals name="show_modem_logcat_countdown">
+        <item quantity="other">%1$d askeleen päässä modeemin lokista</item>
+        <item quantity="one">%1$d askeleen päässä modeemin lokista</item>
     </plurals>
     <plurals name="show_pho_countdown">
         <item quantity="other">Olet %1$d askeleen päässä puhelimen tiedoista.</item>
