--- a/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
@@ -23,6 +23,7 @@
 	<string-array name="thermal_summaries">
         <item>Priorisoi lämpötilan säätö</item>
         <item>Priorisoi suorituskyky</item>
+        <item>Määritys poistettu käytöstä äärimmäisessä virransäästötilassa</item>
     </string-array>
     <string-array name="power_mode_entries">
         <item>Suorituskyky</item>
