XML 8.9.17 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.9.17. Samalla korjattiin ongelmasta #6 käännös Whatsapp Cleaner ja Harware test.

--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
@@ -91,7 +91,7 @@
         <item>Argentiina</item>
         <item>Meksiko</item>
         <item>Venezuela</item>
-        <item>Caymansaaret</item>
+        <item>George Town</item>
         <item>Yhdysvallat</item>
         <item>Costa Rica</item>
         <item>Curaçao</item>
