--- a/Finnish/main/Contacts.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Contacts.apk/res/values-fi-rFI/plurals.xml
@@ -1,5 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- 8.9.17 -->
+    <plurals name="foundTooManyContacts_plurals">
+        <item quantity="other">Löydettiin enemmän kuin %d yhteystietoa.</item>
+        <item quantity="one">Löydettiin enemmän kuin %d yhteystieto.</item>
+    </plurals>
+    <plurals name="label_duplicate_count_plurals">
+        <item quantity="other">(%1$d)</item>
+        <item quantity="one">(%1$d)</item>
+    </plurals>
+    <plurals name="merge_contact_message_plurals">
+        <item quantity="other">%1$d yhteystietoa, joilla osittain identtiset tiedot</item>
+        <item quantity="one">%1$d yhteystieto, jolla osittain identtiset tiedot</item>
+    </plurals>
+    <plurals name="select_all_exceed_plurals">
+        <item quantity="other">Valitse enintään %1$d, et voi valita kaikkia</item>
+        <item quantity="one">Valitse enintään %1$d, et voi valita kaikkia</item>
+    </plurals>
+    <plurals name="select_exceed_plurals">
+        <item quantity="other">Valitse enintään %1$d</item>
+        <item quantity="one">Valitse enintään %1$d</item>
+    </plurals>
+    <!-- // 8.9.17 // -->
     <plurals name="abbrev_a_hour_ago">
         <item quantity="other">Tunti sitten</item>
     </plurals>
