--- a/Finnish/main/Mms.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/arrays.xml
@@ -28,7 +28,7 @@
     </string-array>
     <string-array name="prefEntries_vibrateWhen">
         <item>Aina</item>
-        <item>Vain äänettömällä</item>
+        <item>Vain Äänetön -tilassa</item>
         <item>Ei koskaan</item>
     </string-array>
     <string-array name="resent_via_entries_mms">
