--- a/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/plurals.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <plurals name="subtitle_offset_advance_times">
-        <item quantity="other">Tekstityksiä siirretään %.1f sekuntia eteenpäin</item>
-        <item quantity="one">Tekstityksiä siirretään %.1f sekunti eteenpäin</item>
+    <plurals name="lv_subtitle_offset_advance_times">
+        <item quantity="other">Tekstitykset näytetään %.1f sekuntia aiemmin</item>
+        <item quantity="one">Tekstitykset näytetään %.1f sekunti aiemmin</item>
     </plurals>
-    <plurals name="subtitle_offset_delay_times">
-        <item quantity="other">Tekstityksiä viivästetään %.1f sekuntia</item>
-        <item quantity="one">Tekstityksiä viivästetään %.1f sekunti</item>
+    <plurals name="lv_subtitle_offset_delay_times">
+        <item quantity="other">Tekstitykset näytetään %.1f sekuntia myöhemmin</item>
+        <item quantity="one">Tekstitykset näytetään %.1f sekunti myöhemmin</item>
     </plurals>
-    <plurals name="subtitle_onlinesub_size_float_kb">
+    <plurals name="lv_subtitle_onlinesub_size_float_kb">
         <item quantity="other">Koko: %.2f Kt</item>
         <item quantity="one">Koko: %.2f Kt</item>
     </plurals>
-    <plurals name="v_video_count">
+    <plurals name="lv_video_count">
         <item quantity="other">%d videota</item>
         <item quantity="one">%d video</item>
+    </plurals>
+    <plurals name="ovp_detail_v_video_count">
+        <item quantity="other">%d videota</item>
+        <item quantity="one">%d video</item>
+    </plurals>
+    <plurals name="ovp_home_item_unit">
+        <item quantity="other">%d videota</item>
+        <item quantity="one">%d video</item>
+    </plurals>
+    <plurals name="pw_comment_count">
+        <item quantity="other">%d kommenttia</item>
+        <item quantity="one">%d kommentti</item>
+    </plurals>
+    <plurals name="pw_comment_sub_count">
+        <item quantity="other">%d vastausta</item>
+        <item quantity="one">%d vastaus</item>
+    </plurals>
+    <plurals name="pw_comment_view_all_comment">
+        <item quantity="other">Näytä kaikki %d kommenttia</item>
+        <item quantity="one">Näytä %d kommentti</item>
     </plurals>
 </resources>
