--- a/Finnish/main/DownloadProvider.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/DownloadProvider.apk/res/values-fi-rFI/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<plurals name="notification_download_failed_more">
+        <item quantity="other">%1$d kohdetta ei voitu ladata</item>
+        <item quantity="one">%1$d kohdetta ei voitu ladata</item>
+    </plurals>
     <plurals name="notif_summary_active">
         <item quantity="other">Ladataan %d tiedostoa</item>
         <item quantity="one">Ladataan %d tiedostoa</item>
