--- a/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/plurals.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="dialog_confirm_delete_downloads_message">
+        <item quantity="other">Poistetaanko %d latausta?</item>
+        <item quantity="one">Poistetaanko %d lataus?</item>
+    </plurals>
+    <plurals name="download_info_count_deleted_tasks">
+        <item quantity="other">Poistettiin %s latausta onnistuneesti</item>
+        <item quantity="one">Poistettiin %s lataus onnistuneesti</item>
+    </plurals>
     <plurals name="sniff_find_resource">
         <item quantity="other">Löytyi %d kohdetta</item>
         <item quantity="one">Löytyi 1 kohde</item>
