--- a/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/arrays.xml
@@ -15,6 +15,7 @@
     <string-array name="emode_app_groups">
         <item>Järjestelmäsovellukset</item>
         <item>Muut sovellukset</item>
+        <item>Valitut sovellukset</item>
     </string-array>
     <string-array name="thermal_entries">
         <item>Oletus lämpötilan säätötila</item>
