XML 8.10.25 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.10.25.

--- a/Finnish/main/Music.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Music.apk/res/values-fi-rFI/plurals.xml
@@ -102,6 +102,10 @@ Huomio: Tiedosto poistetaan myös tältä laitteelta."</item>
         <item quantity="other">%d kappaletta</item>
         <item quantity="one">%d kappale</item>
     </plurals>
+    <plurals name="video_count">
+        <item quantity="other">Videota</item>
+        <item quantity="one">Video</item>
+    </plurals>
     <plurals name="video_play_count">
         <item quantity="other">%1$s katselukertaa</item>
         <item quantity="one">%1$s katselukerta</item>
