XML 8.10.29 osa 2/2 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.10.29.

--- a/Finnish/main/Mms.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/plurals.xml
@@ -22,6 +22,10 @@
         <item quantity="zero">Valitse kohteet</item>
         <item quantity="one">%d valittu</item>
     </plurals>
+    <plurals name="delivery_toast_body_more_plurals">
+        <item quantity="other">%1$s ja %2$d muuta henkilöä vastaanottivat viestin</item>
+        <item quantity="one">%1$s ja %2$d muu henkilö vastaanotti viestin</item>
+    </plurals>
     <plurals name="group_message_failed_title">
         <item quantity="other">Lähettäminen epäonnistui %d yhteystiedolle</item>
         <item quantity="one">Lähettäminen epäonnistui %d yhteystiedolle</item>
