--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
@@ -8,6 +8,10 @@
         <item quantity="other">Päivityksiä saatavilla %1$d teemalle.</item>
         <item quantity="one">Päivitys saatavilla %1$d teemalle.</item>
     </plurals>
+    <plurals name="theme_designer_products_count">
+        <item quantity="other">%1$s työtä</item>
+        <item quantity="one">%1$s työ</item>
+    </plurals>
     <plurals name="theme_update_local_resource_notifaction">
         <item quantity="other">Päivityksiä saatavilla %1$d teemaa varten</item>
         <item quantity="one">Päivitys saatavilla %1$d teemaa varten</item>
