--- a/Finnish/main/Weather.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Weather.apk/res/values-fi-rFI/plurals.xml
@@ -12,6 +12,10 @@
         <item quantity="other">%d päivää sitten</item>
         <item quantity="one">%d päivä sitten</item>
     </plurals>
+    <plurals name="aqi_all_city_cur_num">
+        <item quantity="other">%1$s aseman keskiarvo</item>
+        <item quantity="one">%1$s aseman keskiarvo</item>
+    </plurals>
     <plurals name="daily_forcast_drawer_on_top">
         <item quantity="other">%1$s-päivän ennustus</item>
         <item quantity="one">%1$s-päivän ennustus</item>
