XML 8.11.5 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.11.5.

--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
@@ -322,7 +322,7 @@
         <item>Intia</item>
         <item>Yhdysvallat</item>
         <item>Brasilia</item>
-        <item>Yhdysvallat</item>
+        <item>Chile</item>
         <item>Liberia</item>
         <item>Sri Lanka</item>
         <item>Meksiko</item>
