--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/arrays.xml
@@ -23,4 +23,8 @@
         <item>Tyhjennä</item>
         <item>Tyhjennä ja ilmoita</item>
     </string-array>
+    <string-array name="wechat_sort">
+        <item>Päivämäärä</item>
+        <item>Koko</item>
+    </string-array>
 </resources>
