--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/arrays.xml
@@ -83,6 +83,11 @@
         <item>金币</item>
         <item>红包来了</item>
     </string-array>
+    <string-array name="traffic_package_type">
+        <item>Kuukaisittainen datapaketti</item>
+        <item>Päiväkohtainen datapaketti</item>
+        <item>Rajoittamaton datapaketti</item>
+    </string-array>
     <string-array name="tether_limit_warn_type">
         <item>Poista käytöstä ja ilmoita</item>
         <item>Vain ilmoitus</item>
