XML 8.11.26 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.11.26. Tässä päivityksessä korjattiin ongelmat #4, osittain #5 ja #6:n Facebook cleaner -käännös.

--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/plurals.xml
@@ -32,4 +32,8 @@
         <item quantity="other">%1$d sekuntia</item>
         <item quantity="one">%1$d sekunti</item>
     </plurals>
+    <plurals name="snooze_duration_summary">
+        <item quantity="other">Hälytys soi %2$s kertaa (%1$s min. per kerta)</item>
+        <item quantity="one">Hälytys soi %2$s kerran (%1$s min.)</item>
+    </plurals>
 </resources>
