--- a/Finnish/main/Mms.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/arrays.xml
@@ -31,6 +31,13 @@
         <item>Vain Äänetön -tilassa</item>
         <item>Ei koskaan</item>
     </string-array>
+    <string-array name="reason_type">
+        <item>Huijaus</item>
+        <item>Selvä tai laiton sisältö</item>
+        <item>Roskaa</item>
+        <item>Muu</item>
+        <item>Peruuta</item>
+    </string-array>
     <string-array name="resent_via_entries_mms">
         <item>Tekstiviesti</item>
         <item>Mi Viesti</item>
