--- a/Finnish/main/Settings.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/arrays.xml
@@ -1339,4 +1339,8 @@ Huomautus: Vain Ubuntu 8.04!"</item>
         <item>Animaatioasteikko 5-kertainen</item>
         <item>Animaatioasteikko 10-kertainen</item>
     </string-array>
+    <string-array name="default_vol_stream_entries">
+        <item>Soittoääni</item>
+        <item>Media</item>
+    </string-array>
 </resources>
