--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/plurals.xml
@@ -4,4 +4,8 @@
         <item quantity="other">Tarkennettu. %d kasvoa havaittu</item>
         <item quantity="one">Tarkennettu. %d kasvo havaittu</item>
     </plurals>
+    <plurals name="toast_burst_snap_finished_summary">
+        <item quantity="other">Sarjakuvaus valmis, otettiin %1$s kuvaa</item>
+        <item quantity="one">Sarjakuvaus valmis, otettiin %1$s kuva</item>
+    </plurals>
 </resources>
