--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/arrays.xml
@@ -4,6 +4,20 @@
         <item>Poika</item>
         <item>Tyttö</item>
     </string-array>
+    <string-array name="month">
+        <item>Tammikuu</item>
+        <item>Helmikuu</item>
+        <item>Maaliskuu</item>
+        <item>Huhtikuu</item>
+        <item>Toukokuu</item>
+        <item>Kesäkuu</item>
+        <item>Heinäkuu</item>
+        <item>Elokuu</item>
+        <item>Syyskuu</item>
+        <item>Lokakuu</item>
+        <item>Marraskuu</item>
+        <item>Joulukuu</item>
+    </string-array>
     <string-array name="owner_relation">
         <item>Isä</item>
         <item>Äiti</item>
@@ -18,6 +32,12 @@
         <item>Viime Keskiviikko</item>
         <item>Viime Torstai</item>
         <item>Viime Perjantai</item>
+    </string-array>
+    <string-array name="season">
+        <item>Kevät</item>
+        <item>Kesä</item>
+        <item>Syksy</item>
+        <item>Talvi</item>
     </string-array>
     <string-array name="chinese_holiday_last_year">
         <item>Viime Kiinan Uudenvuoden Aattona</item>
@@ -51,6 +71,20 @@
         <item>National Day through the years</item>
         <item>Christmas through the years</item>
     </string-array>
+    <string-array name="last_month">
+        <item>Tammikuu</item>
+        <item>Helmikuu</item>
+        <item>Maaliskuu</item>
+        <item>Huhtikuu</item>
+        <item>Toukokuu</item>
+        <item>Kesäkuu</item>
+        <item>Heinäkuu</item>
+        <item>Elokuu</item>
+        <item>Syyskuu</item>
+        <item>Lokakuu</item>
+        <item>Marraskuu</item>
+        <item>Joulukuu</item>
+    </string-array>
     <string-array name="month_last_year">
         <item>Viime Tammikuu</item>
         <item>Viime Helmikuu</item>
@@ -65,37 +99,11 @@
         <item>Viime Marraskuu</item>
         <item>Viime Joulukuu</item>
     </string-array>
-    <string-array name="month_past_year">
-        <item>Tammikuun muistot</item>
-        <item>Helmikuun muistot</item>
-        <item>Maaliskuun muistot</item>
-        <item>Huhtikuun muistot</item>
-        <item>Toukokuun muistot</item>
-        <item>Kesäkuun muistot</item>
-        <item>Heinäkuun muistot</item>
-        <item>Elokuun muistot</item>
-        <item>Syyskuun muistot</item>
-        <item>Lokakuun muistot</item>
-        <item>Marraskuun muistot</item>
-        <item>Joulukuun muistot</item>
-    </string-array>
     <string-array name="season_last_year">
         <item>Viime kevät</item>
         <item>Viime kesä</item>
         <item>Viime syksy</item>
         <item>Viime talvi</item>
-    </string-array>
-    <string-array name="season_past_year">
-        <item>Kevään muistot</item>
-        <item>Kesän muistot</item>
-        <item>Syksyn muistot</item>
-        <item>Talven muistot</item>
-    </string-array>
-    <string-array name="season_recap">
-        <item>Kevään kertaus</item>
-        <item>Kesän kertaus</item>
-        <item>Syksyn kertaus</item>
-        <item>Talven kertaus</item>
     </string-array>
     <string-array name="relation_with_me">
         <item>Minä</item>
