--- a/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/plurals.xml
@@ -1,27 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <plurals name="notification_warning">
-        <item quantity="other">Tallennustila vähissä (alle %d minuuttia)</item>
-        <item quantity="one">Tallennustila vähissä (alle %d minuutti)</item>
-    </plurals>
-    <plurals name="record_downloading_complete_count">
-        <item quantity="other">%d nauhoitusta ladattu</item>
-        <item quantity="one">%d nauhoitus ladattu</item>
-    </plurals>
-    <plurals name="local_records_count">
-        <item quantity="other">%d kohdetta</item>
-        <item quantity="one">%d kohde</item>
-    </plurals>
-    <plurals name="unsynced_records_count">
-        <item quantity="other">%d synkronoimatonta</item>
-        <item quantity="one">%d synkronoimaton</item>
-    </plurals>
     <plurals name="btn_clear_records">
-        <item quantity="other">Poista %d nauhoitusta</item>
-        <item quantity="one">Poista %d nauhoitus</item>
+        <item>Poista %d nauhoitusta</item>
+        <item>Poista %d nauhoitus</item>
     </plurals>
     <plurals name="choose_call_records_count">
-        <item quantity="other">%d kohdetta</item>
-        <item quantity="one">%d kohde</item>
+        <item>%d kohdetta</item>
+        <item>%d kohde</item>
+    </plurals>
+    <plurals name="local_records_count">
+        <item>%d kohdetta</item>
+        <item>%d kohde</item>
+    </plurals>
+    <plurals name="notification_warning">
+        <item>Tallennustila vähissä (alle %d minuuttia)</item>
+        <item>Tallennustila vähissä (alle %d minuutti)</item>
+    </plurals>
+    <plurals name="record_downloading_complete_count">
+        <item>%d nauhoitusta ladattu</item>
+        <item>%d nauhoitus ladattu</item>
+    </plurals>
+    <plurals name="unsynced_records_count">
+        <item>%d synkronoimatonta</item>
+        <item>%d synkronoimaton</item>
     </plurals>
 </resources>
