--- a/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/plurals.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="btn_clear_records">
-        <item quantity="other">Delete %d recordings</item>
-        <item quantity="one">Delete %d recording</item>
+        <item quantity="other">Poista %d nauhoitusta</item>
+        <item quantity="one">Poista %d nauhoitus</item>
     </plurals>
     <plurals name="choose_call_records_count">
-        <item quantity="other">%d items</item>
-        <item quantity="one">%d item</item>
+        <item quantity="other">%d kohdetta</item>
+        <item quantity="one">%d kohde</item>
     </plurals>
     <plurals name="local_records_count">
-        <item quantity="other">%d items</item>
-        <item quantity="one">%d item</item>
+        <item quantity="other">%d kohdetta</item>
+        <item quantity="one">%d kohde</item>
     </plurals>
     <plurals name="notification_warning">
-        <item quantity="other">Storage low (less than %d minutes)</item>
-        <item quantity="one">Storage low (less than %d minute)</item>
+        <item quantity="other">Tallennustila vähissä (alle %d minuuttia)</item>
+        <item quantity="one">Tallennustila vähissä (alle %d minuutti)</item>
     </plurals>
     <plurals name="record_downloading_complete_count">
-        <item quantity="other">%d recordings downloaded</item>
-        <item quantity="one">%d recording downloaded</item>
+        <item quantity="other">%d nauhoitusta ladattu</item>
+        <item quantity="one">%d nauhoitus ladattu</item>
     </plurals>
     <plurals name="unsynced_records_count">
-        <item quantity="other">%d not synced</item>
-        <item quantity="one">%d not synced</item>
+        <item quantity="other">%d synkronoimatonta</item>
+        <item quantity="one">%d synronoimaton</item>
     </plurals>
 </resources>
