--- a/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/plurals.xml
@@ -13,8 +13,8 @@
         <item quantity="one">%d kohde</item>
     </plurals>
     <plurals name="notification_warning">
-        <item quantity="other">Tallennustila v‰hiss‰ (alle %d minuuttia)</item>
-        <item quantity="one">Tallennustila v‰hiss‰ (alle %d minuutti)</item>
+        <item quantity="other">Tallennustila v√§hiss√§ (alle %d minuuttia)</item>
+        <item quantity="one">Tallennustila v√§hiss√§ (alle %d minuutti)</item>
     </plurals>
     <plurals name="record_downloading_complete_count">
         <item quantity="other">%d nauhoitusta ladattu</item>
