--- a/Finnish/main/Calculator.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/Calculator.apk/res/values-fi-rFI/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<plurals name="entries">
+        <item quantity="other">%d kohdetta</item>
+        <item quantity="one">%d kohde</item>
+    </plurals>
     <plurals name="mortgage_summary_years">
         <item quantity="other">%1$d vuotta (%2$d kuukautta)</item>
         <item quantity="one">%1$d vuosi (%2$d kuukautta)</item>
